<resources>
    <string name="app_name">GoGreen</string>
    <string name="new_journey">new journey</string>
    <string name="delete_journey">delete journey</string>
    <string name="get_start">get start</string>
    <string name="transportation_menu">Pick a Car</string>
    <string name="add_new_transportation">Add new transportation</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="nickname">Nickname</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="transportation">Add a new vehicle</string>
    <string name="transportation_instruction">Select the make, model, year, and specs of your vehicle.</string>
    <string name="no_transportation">You haven\'t added any vehicles yet!</string>
    <string name="no_route">You haven\'t added any routes yet!</string>
    <string name="route_menu">Pick a Route</string>
    <string name="add_new_route">Add new route</string>
    <string name="route">Add a new route</string>
    <string name="route_instruction">Enter the distance traveled within a city and on the highway during the route. The total distance will be calculated for you.</string>
    <string name="save_route_instruction">Leaving this unchecked will not add this route to the route list. You may want to only save regularly travelled routes.</string>
    <string name="city">City</string>
    <string name="total_distance">Total distance (km) </string>
    <string name="highway">Highway</string>
    <string name="confirm">Confirm</string>
    <string name="delete_route">delete route</string>
    <string name="route_name">Route Name</string>
    <string name="route_label">Route: </string>
    <string name="distance_label">Total distance: </string>
    <string name="total">Total Distance</string>
    <string name="exit">exit</string>
    <string name="name">name</string>
    <string name="main_menu_intro">Main Menu</string>
    <string name="route_nickname">route nickname</string>
    <string name="highway_distance">highway distance (km)</string>
    <string name="city_distance">city distance (km)</string>
    <string name="emptyNickname">Please enter a nickname for your car</string>
    <string name="emptyRouteName">Please enter a name for the route</string>
    <string name="emptyCityDistance">Please enter city distance</string>
    <string name="emptyHighwayDistance">Please enter highway distance</string>
    <string name="text_spec">Specification</string>
    <string name="emissionTitle">Journey</string>
    <string name="emissionIntro">Your emission for this trip:</string>
    <string name="feedbackLine">KG CO2</string>
    <string name="ok">OK</string>
    <string name="add_route_to_list_of_saved_routes">Add route to list of saved routes</string>
    <string name="kg_CO2"> Kilograms of CO2</string>
    <string name="tree_day_CO2"> Tree days of CO2</string>
    <string name="table_entry1">Date</string>
    <string name="table_entry2">Route</string>
    <string name="table_entry3">Distance</string>
    <string name="table_entry4">Vehicle</string>
    <string name="table_entry5">Carbon emission</string>
    <string name="switchView">Switch to Table</string>
    <string name="switchView2">Switch to Chart</string>
    <string name="table_intro">List of Trips</string>
    <string name="delete_vehicle">DELETE VEHICLE</string>
    <string name="set_date">Set Date</string>
    <string name="select_date">Select a date for your journey</string>
    <string name="pick_date">Pick Date</string>
    <string name="add_a_new_bill">Add a new bill</string>
    <string name="amount">Electricity consumption in GWh</string>
    <string name="number_of_people">Number of people</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="show_emissions_for">Show emissions for:</string>
    <string name="date_range">"Last %1$d days</string>
    <string name="utility_menu">Utility Bills</string>
    <string name="no_utility">You haven\'t added any utilities yet!</string>
    <string name="new_utility">Utility Bills</string>
    <string name="utility_instructions">Enter the amount of gas/electricity consumption on your bill along with the number of people in your household. \nEmissions per person will be calculated for you.</string>
    <string name="amount_used_in_Kwh">Amount used in KWh</string>
    <string name="amount_used_in_gj">Amount used in Gj</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="from">From: \</string>
    <string name="to"> \ To: \</string>
    <string name="selet_to">Select the ending date</string>
    <string name="select_from">Select a starting date</string>
    <string name="tips">TIPS</string>
    <string name="error">ERROR</string>
    <string name="edit_journey_intro">Edit Journey</string>
    <string name="edit_car">Edit vehicle</string>
    <string name="edit_route">Edit Route</string>
    <string name="edit_date">pick another date for the journey</string>
    <string name="edit_route_title">Edit an existing route</string>
    <string name="edit_route_in_journey">Edit route in the journey</string>
    <string name="edit_car_in_journey">Edit car in the Journey</string>
    <string name="empteyCarData">Please choose a car</string>
    <string name="journey_menu_title">Journeys</string>
    <string name="date_placeholder">xxxx-xx-xx</string>
    <string name="more_graphs">Emission graphs</string>

    <string name="toast_error_date">Date selections invalid</string>
    <string name="toast_date_missing">Please pick dates for your bill</string>
    <string name="edit_utility_title">Edit an existing bill</string>
    <string name="toast_type_missing">Please select a bill type</string>
    <string name="toast_endDate_missing">Please enter bill end date</string>
    <string name="toast_startDate_missing">Please enter bill start date</string>
    <string name="toast_billAmount_missing">Please enter bill amount</string>
    <string name="toast_number_ppl_missing">Please enter number of people in your home</string>
    <string name="toast_car_missing">Please select a car</string>
    <string name="previous_emission_max">Your previous max emission was \</string>
    <string name="trips_message">"You have %1$d journeys on this date. \"</string>
    <string name="edit_existing_car">Edit an existing vehicle</string>
    <string name="chart_label">Carbon Emissions</string>
    <string name="tip_report">"Your emission for this trip was "</string>
    <string name="tip_report_p2">. Here\'s a tip to maintain low emissions: \</string>
    <string name="km">Km</string>
    <string name="kg">Kg</string>
    <string name="city_distance_route_menu">City distance: \</string>
    <string name="highway_distance_route_menu">Highway distance: \</string>
    <string name="total_distance_route_menu">Total distance: \</string>
    <string name="kwh">KWh</string>
    <string name="gj">Gj</string>
    <string name="kg_per_person">kg CO2 per person</string>
    <string name="bill_Amount">Bill amount:</string>
    <string name="emission_fairShare">Daily emissions:</string>
    <string name="utility_tip_p1">Your utility usage per day for this bill is \</string>
    <string name="tip_kg_per_person">kg per person: \</string>
    <string name="car_emission">Car Emission</string>
    <string name="pie_chart_label_on_date">All emissions on \</string>

    <string name="no_journey">You haven\'t added any journey yet!</string>
    <string name="tab1">Graph</string>
    <string name="tab2">Journey</string>
    <string name="tab3">Utility</string>
    <string name="tab4">Setting</string>
    <string name="setting">Setting</string>
    <string name="pick_icon_title">Icon</string>
    <string name="please_pick_icon">Please pick an icon for your car</string>
    <string name="label_car_icon">Car Icon</string>
    <string name="emptyDistance">Please enter at least one of the distance</string>
    <string name="setting_unit">CO2 Unit</string>
    <string name="lang_english">English</string>
    <string name="about">About</string>
    <string name="team_name">Team Navy</string>
    <string name="year_created">Spring 2017</string>
    <string name="developer_label">Developed by:</string>
    <string name="developers">Alison Wong\nMing-Nu Lee\nXiaoLu He\nZhiXuan Hu</string>
    <string name="resource_label">Resources used:</string>
    <string name="restart_app">Please restart the app to see change</string>
    <string name="notification_title_no_journey">You entered no journeys for today</string>
    <string name="notification_title_no_gas_utility">You have not entered a natural gas bill for the last month and a half</string>
    <string name="notification_title_no_electricity_utility">You have not entered an electricity bill for the last month and a half</string>
    <string name="notification_title_general">"You entered %1$d journey(s) for today."</string>
    <string name="notification_no_journey">Would you like to enter a journey?</string>
    <string name="notification_no_utility">Would you like to enter a bill?</string>
    <string name="notification_general">Want to enter more?</string>
    <string name="chartType_unselect">Please select a chart type!</string>
    <string name="invalidDistance">Please enter a valid distance</string>
    <string name="tree_day">Tree day(s)</string>
    <string name="tree_day_per_person">Tree days per person</string>
    <string name="select_a_chart">Charts Available:</string>
    <string name="mode">mode</string>
    <string name="route_switch">route</string>
    <string name="other_route">other</string>
    <string name="groupTransMode">Group by transMode</string>
    <string name="groupRoute">Group by Route</string>
    <string name="bus">Bus</string>
    <string name="skytrain">Sky Train</string>
    <string name="natrualGas">Natural Gas</string>
    <string name="electricity">Electricity</string>
    <string name="car">Car</string>
    <string name="NaturalGas">Natural Gas</string>
    <string name="Electricity">Electricity</string>
    <string name="chart_label_other">Other</string>
    <string name="bike">Bike</string>
    <string name="green">GREEN</string>
    <string name="welcome_icon">welcome_icon</string>
    <string name="invalidNumPeople">Please enter a valid number of people in your home</string>
    <string name="invalidBillAmount">Please enter a valid bill amount</string>
    <string name="target">Target</string>
    <string name="average">average</string>
</resources>
