<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_vehicle_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ylcar"
    tools:context="com.example.ottot.carbontracker.UI.add_vehicle_page">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_vehicle_menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/CustomToolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:id="@+id/main_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_vehicle_menu_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/actionBarText"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/add_vehicle_menu_toolbar">

        <EditText
            android:id="@+id/edit_vehicleNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_vehicleNickname"
            android:layout_alignTop="@+id/txt_vehicleNickname"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_vehicleNickname"
            android:text="@string/make"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_year"
            android:layout_below="@+id/txt_year" />

        <Spinner
            android:id="@+id/spinner_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/txt_model"
            android:layout_below="@+id/txt_model" />

        <TextView
            android:id="@+id/txt_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_model"
            android:text="@string/year"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_make" />

        <TextView
            android:id="@+id/txt_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_make"
            android:text="@string/model"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_car_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/vehicle_icon"
            android:layout_alignStart="@+id/vehicle_icon"
            android:text="@string/label_car_icon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/transportation_instruction" />

        <ImageView
            android:id="@+id/vehicle_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_vehicleNickname"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/edit_vehicleNickname"
            app:srcCompat="@mipmap/vehicleicon" />

        <TextView
            android:id="@+id/txt_vehicleNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="12dp"
            android:text="@string/nickname"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_spec" />

        <TextView
            android:id="@+id/text_spec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_year"
            android:text="@string/text_spec"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>
